<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerTouchZone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zendroid.FullscreenActivity" >

    <!-- The primary full-screen view. This can be replaced with whatever view is needed to present your content, e.g. VideoView, SurfaceView, TextureView, etc. -->

    <SurfaceView
        android:id="@+id/sfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvUsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:singleLine="true"
                android:text="@string/dummy_content"
                android:textColor="@color/font_color_zen_values"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUsdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:singleLine="true"
                android:text="@string/usd_label"
                android:textColor="@color/font_color_zen_values"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvEur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:singleLine="true"
                android:text="@string/dummy_content"
                android:textColor="@color/font_color_zen_values"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEurLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:singleLine="true"
                android:text="@string/eur_label"
                android:textColor="@color/font_color_zen_values"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvBrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:singleLine="true"
                android:text="@string/dummy_content"
                android:textColor="@color/font_color_zen_values"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBrentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:singleLine="true"
                android:text="@string/brent_label"
                android:textColor="@color/font_color_zen_values"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/containerDummyButton"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/background_black"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/btnDummy"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>